:construction: rebrand footer & fix overflow issue

--- a/src/components/OurServices/OurServices.module.css
+++ b/src/components/OurServices/OurServices.module.css
@@ -44,7 +44,7 @@
   width: 200px;
 }
 .buttonWrapper {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
