--- a/src/components/OurWork/OurWork.module.css
+++ b/src/components/OurWork/OurWork.module.css
@@ -51,9 +51,8 @@
   padding-top: 5em;
 }
 .buttonWrapper {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4em;
 }
