--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,23 +1,89 @@
 .container {
-  height: 50px;
+  height: 50vw;
+  width: 100vw;
   font-size: 14px;
   align-items: center;
   display: flex;
-  flex-direction: column;
-  color: white;
-  gap: 1rem;
-  margin-bottom: 2rem;
   margin-top: 2rem;
+}
+.leftContainer {
+  border-top: 1px solid rgba(255, 255, 255, 0.386);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
+  color: white;
+  width: 50vw;
+  height: 100%;
+}
+.leftContents {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.links a {
+  font-size: 12px;
+  font-weight: 200;
+  letter-spacing: 0.2em;
+}
+.copy {
+  padding-bottom: 3em;
+}
+
+.rightContainer {
+  background-color: white;
+  width: 50vw;
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+.title {
+  font-size: 33px;
+  font-weight: 200;
+  padding-bottom: 0.5rem;
+  letter-spacing: 0.2em;
 }
 .links {
   display: flex;
   align-items: center;
   gap: 3rem;
-  padding-bottom: 1rem;
+  padding-bottom: 20vw;
 }
-
+.topWrapper {
+  padding-bottom: 16vw;
+}
+.titleWrapper {
+  padding-bottom: 10vw;
+}
 .socials {
   display: flex;
   align-items: center;
-  gap: 6rem;
+  justify-content: center;
+  gap: 3rem;
+  padding-bottom: 3em;
+}
+.social {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+}
+.socialText {
+  font-size: 12px;
+  font-weight: 200;
+  letter-spacing: 0.2em;
+}
+.backgroundXs {
+  position: absolute;
+  right: 0%;
+  top: -34%;
+  width: 73%;
+  height: 84%;
+  z-index: 1;
+  overflow: hidden;
 }
